--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-Haloo
-Nama saya bonar
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>HALOOO</h1>
+<p>Nama saya Bonar.</p>
+
+</body>
+</html>
