--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Website Template</title>
+  <title>LatihanWeb01</title>
   <style>
     body 
     {
@@ -64,15 +64,15 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>HEADER</h1>
+      <h1>PEMROGRAMAN</h1>
     </div>
     <div class="navigation">
-      <p>NAVIGASI</p>
+      <p>POLITEKNIK ATMI SURAKARTA</p>
     </div>
     <div class="content">
       <div class="main">
-        <h2>Heading 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h2>Rekayasa Perangkat Lunak</h2>
+        <p>salah satu bidang profesi dan juga mata pelajaran yang mempelajari tentang pengembangan perangkat-perangkat lunak termasuk dalam hal pembuatannya, pemeliharaan hingga manajemen organisasi dan manajemen kualitasnya.</p>
       </div>
       <div class="sidebar">
         <h3>Menu:</h3>
@@ -81,11 +81,12 @@
           <li>Berita</li>
           <li>Layanan</li>
           <li>Kontak</li>
+          <img src="Gambar/logo-removebg-preview.png" alt="logo atmi" width="120" height="130">
         </ul>
       </div>
     </div>
     <div class="footer">
-      <p>FOOTER</p>
+      <p>TEKNOLOGI REKAYASA MEKATRONIKA</p>
     </div>
   </div>
 </body>
