--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
             border: 1px solid #ccc; /* Menambahkan garis tepi pada tabel */
         }
 
-        /* Warna bagian header */
+        /* Warna header */
         .header {
             background-color: #ffe6cc;
         }
 
-        /* Warna bagian navigasi */
+        /* Warna navigasi */
         .nav {
             background-color: #e6f2ff;
         }
 
-        /* Warna bagian konten utama */
+        /* Warna konten utama */
         .main-content {
             background-color: #ffe6e6;
             text-align: left;
         }
 
-        /* Warna bagian sidebar */
+        /* Warna sidebar */
         .sidebar {
             background-color: #e0ffe6;
             text-align: left;
         }
 
-        /* Warna bagian footer */
+        /* Warna footer */
         .footer {
             background-color: #ffe6cc;
         }
