--- a/index.html
+++ b/index.html
@@ -26,28 +26,33 @@
         /* Warna header */
         .header {
             background-color: #ffe6cc;
+            border: 2px solid #ffae00;
         }
 
         /* Warna navigasi */
         .nav {
             background-color: #e6f2ff;
+            border: 2px solid #1b89ff;
         }
 
         /* Warna konten utama */
         .main-content {
             background-color: #ffe6e6;
+            border: 2px solid #ff3434;
             text-align: left;
         }
 
         /* Warna sidebar */
         .sidebar {
             background-color: #e0ffe6;
+            border: 2px solid #00ff33;
             text-align: left;
         }
 
         /* Warna footer */
         .footer {
             background-color: #ffe6cc;
+            border: 2px solid #ffae00;
         }
     </style>
 </head>
